Fixed overflow and modal sizing

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,9 @@ height: 100vh;
 position: absolute;
 bottom: 0;
 left: 50%;
-transform: translate(-50%, -50%);
+transform: translate(-50%, -50%); 
+z-index: 1000; 
+cursor: pointer;
 }
 
 .ar-controls img {
@@ -24,7 +26,7 @@ display: none;
 .modal {
 display: none;
 position: fixed;
-padding-top: 50px;
+padding-top: 90px;
 left: 0;
 top: 0;
 width: 100%;
@@ -46,12 +48,16 @@ margin: auto;
 margin-bottom: 20px;
 width: 85%;
 text-align: center;
-overflow:auto;
+
 }
 
 .modal-small {
-    margin-left: 20px;
-    margin-right: 20px;
+  width: 75%;
+  border-radius: 10px;
+}
+
+.modal-pickbackground {
+  overflow:auto;
 }
 
 
